--- a/Curso-Angular-REST/src/app/app.component.html
+++ b/Curso-Angular-REST/src/app/app.component.html
@@ -4,20 +4,15 @@
 	</div>
 	
 	<div class="form-group">
-		<label for="email">Email:</label>
-		<input id="email" class="form-control" type="email" placeholder="Informe o E-mail..." required="required">
+		<label for="login">Login:</label>
+		<input id="login" name="login" class="form-control" [(ngModel)]="usuario.login" type="text" placeholder="Informe o Login..." required="required">
 	</div>
 	
 	<div class="form-group">
-		<label for="login">Login: *</label>
-		<input id="login" class="form-control" type="text" placeholder="Informe o Login..." required="required">
+		<label for="senha">Senha:</label>
+		<input id="senha" name="senha" class="form-control" [(ngModel)]="usuario.senha" type="password" placeholder="Informe a Senha..." required="required">
 	</div>
 	
-	<div class="form-group">
-		<label for="senha">Senha: *</label>
-		<input id="senha" class="form-control" type="password" placeholder="Informe a Senha..." required="required">
-	</div>
-	
-	<button class="btn btn-primary" type="button">Acessar</button>
+	<button class="btn btn-primary" type="button" (click)="login()">Acessar</button>
 
 </form>
